autotests/syntax-tests/tests/negative/negative107.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var > Name Name = : = ; = ; } ; 